add repository to extension.toml

--- a/extension.toml
+++ b/extension.toml
@@ -3,7 +3,7 @@ name = "GolangSql"
 version = "0.0.1"
 schema_version = 1
 description = "Support SQL in .go files"
-repository = ""
+repository = "https://github.com/IliaSobolev/zed_GolangSqlSupport"
 authors = ["BigFatSeal"]
 themes = []
 languages = ["languages/go"]
